objects/Account_Segment_Mapping__mdt/Account_Segment_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>This custom metadata will contain the mapping for Account&apos;s Segment field.</description>
    <label>Account Segment Mapping</label>
    <pluralLabel>Account Segment Mappings</pluralLabel>
</CustomObject>