objects/Account_Segment_Mapping__mdt/fields/Support_Model__c.field-meta.xml
<CustomField>
    <fullName>Support_Model__c</fullName>
    <description>SS-10016 - New Field to support automation to set Support Model on Accounts based on Account Segment.</description>
    <label>Support Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field TAM</fullName>
                <default>true</default>
                <label>Field TAM</label>
            </value>
            <value>
                <fullName>Field TAM (Japan Bypass Triage)</fullName>
            </value>
            <value>
                <fullName>Field TAM (Korea Bypass Triage)</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Hybrid (Japan Bypass)</fullName>
            </value>
            <value>
                <fullName>Hybrid - Pubsec</fullName>
            </value>
            <value>
                <fullName>Hybrid - South Korea</fullName>
            </value>
            <value>
                <fullName>Partner Supported (SC)</fullName>
            </value>
            <value>
                <fullName>Partner Supported (SC Japan Bypass)</fullName>
            </value>
            <value>
                <fullName>Partner Supported - South Korea</fullName>
            </value>
            <value>
                <fullName>SC-Exempt</fullName>
            </value>
            <value>
                <fullName>SC-Exempt (Japan Bypass Triage)</fullName>
            </value>
            <value>
                <fullName>SC-Exempt (Korea Bypass Triage)</fullName>
            </value>
            <value>
                <fullName>Support Center</fullName>
            </value>
            <value>
                <fullName>Support Center (Japan Bypass)</fullName>
            </value>
            <value>
                <fullName>Support Center (Poland)</fullName>
            </value>
            <value>
                <fullName>Support Center - Pubsec</fullName>
            </value>
            <value>
                <fullName>Support Center - South Korea</fullName>
            </value>
            <value>
                <fullName>Support Center Special Restrictions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>