objects/Account_Segment_Mapping__mdt/listViews/All_with_Fields.listView-meta.xml
<ListView>
    <fullName>All_with_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Order__c</columns>
    <columns>Field__c</columns>
    <columns>Operator__c</columns>
    <columns>Value__c</columns>
    <columns>Segment__c</columns>
    <columns>Support_Model__c</columns>
    <filterScope>Everything</filterScope>
    <label>All with Fields</label>
    <language>en_US</language>
</ListView>